# fish-control

./: .gitignore  README  cfg.yaml  cfg.yaml.tmp
cpp/: CMakeLists.txt
cpp/include/: DynamixelSDKWrapper.h  Kinematics.h  Logger.h  PigpioServo.h
cpp/src/: DynamixelSDKWrapper.cpp  Kinematics.cpp  Logger.cpp  PigpioServo.cpp  main.cpp
fish_control/: __main__.py  config.py  controller.py  kinematics.py  logger.py  main.py  ui.py
fish_control/hw/: fin_servo.py  tail_motor.py
systemd/: fish-gui.service  fish.service
